// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:inputCity 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Panel __AMIS_COMPONENT_CLASS_PREFIX__Panel--default __AMIS_COMPONENT_CLASS_PREFIX__Panel--form"
            data-role="container"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-heading"
            >
              <h3
                class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-title"
              >
                <span
                  class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    表单
                  </span>
                </span>
              </h3>
            </div>
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-body"
            >
              <form
                class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--horizontal"
                novalidate=""
              >
                <input
                  style="display: none;"
                  type="submit"
                />
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--horizontal"
                  data-amis-name="city"
                  data-role="form-item"
                >
                  <label
                    class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label __AMIS_COMPONENT_CLASS_PREFIX__Form-itemColumn--normal"
                  >
                    <span>
                      <span
                        class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                      >
                        <span>
                          城市
                        </span>
                      </span>
                    </span>
                  </label>
                  <div
                    class="__AMIS_COMPONENT_CLASS_PREFIX__Form-value"
                  >
                    <div
                      class="__AMIS_COMPONENT_CLASS_PREFIX__CityPicker"
                    >
                      <div
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        class="__AMIS_COMPONENT_CLASS_PREFIX__Select"
                        role="combobox"
                        tabindex="0"
                      >
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__Select-valueWrap"
                        >
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Select-value"
                          >
                            北京市
                          </div>
                        </div>
                        <a
                          class="__AMIS_COMPONENT_CLASS_PREFIX__Select-clear"
                        >
                          <icon-mock
                            class="icon icon-input-clear"
                            icon="input-clear"
                          />
                        </a>
                        <span
                          class="__AMIS_COMPONENT_CLASS_PREFIX__Select-arrow"
                        >
                          <icon-mock
                            class="icon icon-right-arrow-bold"
                            icon="right-arrow-bold"
                          />
                        </span>
                      </div>
                      <div
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        class="__AMIS_COMPONENT_CLASS_PREFIX__Select"
                        role="combobox"
                        tabindex="0"
                      >
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__Select-valueWrap"
                        >
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Select-value"
                          >
                            北京市市辖区
                          </div>
                        </div>
                        <a
                          class="__AMIS_COMPONENT_CLASS_PREFIX__Select-clear"
                        >
                          <icon-mock
                            class="icon icon-input-clear"
                            icon="input-clear"
                          />
                        </a>
                        <span
                          class="__AMIS_COMPONENT_CLASS_PREFIX__Select-arrow"
                        >
                          <icon-mock
                            class="icon icon-right-arrow-bold"
                            icon="right-arrow-bold"
                          />
                        </span>
                      </div>
                      <div
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        class="__AMIS_COMPONENT_CLASS_PREFIX__Select is-focused"
                        role="combobox"
                        tabindex="0"
                      >
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__Select-valueWrap"
                        >
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Select-value"
                          >
                            海淀区
                          </div>
                        </div>
                        <a
                          class="__AMIS_COMPONENT_CLASS_PREFIX__Select-clear"
                        >
                          <icon-mock
                            class="icon icon-input-clear"
                            icon="input-clear"
                          />
                        </a>
                        <span
                          class="__AMIS_COMPONENT_CLASS_PREFIX__Select-arrow"
                        >
                          <icon-mock
                            class="icon icon-right-arrow-bold"
                            icon="right-arrow-bold"
                          />
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __AMIS_COMPONENT_CLASS_PREFIX__Panel-footer"
              >
                <button
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--primary __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
                  type="submit"
                >
                  <span>
                    Submit
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:inputCity with searchable: open select 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Panel __AMIS_COMPONENT_CLASS_PREFIX__Panel--default __AMIS_COMPONENT_CLASS_PREFIX__Panel--form"
            data-role="container"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-heading"
            >
              <h3
                class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-title"
              >
                <span
                  class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    表单
                  </span>
                </span>
              </h3>
            </div>
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-body"
            >
              <form
                class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--horizontal"
                novalidate=""
              >
                <input
                  style="display: none;"
                  type="submit"
                />
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--horizontal"
                  data-amis-name="city"
                  data-role="form-item"
                >
                  <label
                    class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label __AMIS_COMPONENT_CLASS_PREFIX__Form-itemColumn--normal"
                  >
                    <span>
                      <span
                        class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                      >
                        <span>
                          城市
                        </span>
                      </span>
                    </span>
                  </label>
                  <div
                    class="__AMIS_COMPONENT_CLASS_PREFIX__Form-value"
                  >
                    <div
                      class="__AMIS_COMPONENT_CLASS_PREFIX__CityPicker"
                    >
                      <div
                        aria-expanded="true"
                        aria-haspopup="listbox"
                        aria-owns="downshift-3-menu"
                        class="__AMIS_COMPONENT_CLASS_PREFIX__Select __AMIS_COMPONENT_CLASS_PREFIX__Select--searchable is-opened has-popover"
                        role="combobox"
                        tabindex="0"
                      >
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__Select-valueWrap"
                        >
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Select-placeholder"
                          >
                            请选择
                          </div>
                        </div>
                        <span
                          class="__AMIS_COMPONENT_CLASS_PREFIX__Select-arrow"
                        >
                          <icon-mock
                            class="icon icon-right-arrow-bold"
                            icon="right-arrow-bold"
                          />
                        </span>
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__PopOver __AMIS_COMPONENT_CLASS_PREFIX__Select-popover"
                          data-amis-theme="cxd"
                          role="popover"
                          style="display: block; width: 0px; left: 0px; top: 0px; visibility: hidden;"
                          theme="cxd"
                        >
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__PopOver-overlay"
                          />
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Select-menu"
                          >
                            <div
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Select-input"
                            >
                              <icon-mock
                                class="icon icon-search"
                                icon="search"
                              />
                              <input
                                aria-autocomplete="list"
                                aria-controls="downshift-3-menu"
                                autocomplete="off"
                                id="downshift-3-input"
                                placeholder="搜索"
                                type="text"
                                value=""
                              />
                            </div>
                            <div
                              aria-selected="false"
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Select-option"
                              id="downshift-3-item-0"
                              role="option"
                            >
                              <span
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Select-option-content"
                                title="北京市"
                              >
                                北京市
                              </span>
                            </div>
                            <div
                              aria-selected="false"
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Select-option"
                              id="downshift-3-item-1"
                              role="option"
                            >
                              <span
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Select-option-content"
                                title="天津市"
                              >
                                天津市
                              </span>
                            </div>
                            <div
                              aria-selected="false"
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Select-option"
                              id="downshift-3-item-2"
                              role="option"
                            >
                              <span
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Select-option-content"
                                title="河北省"
                              >
                                河北省
                              </span>
                            </div>
                            <div
                              aria-selected="false"
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Select-option"
                              id="downshift-3-item-3"
                              role="option"
                            >
                              <span
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Select-option-content"
                                title="山西省"
                              >
                                山西省
                              </span>
                            </div>
                            <div
                              aria-selected="false"
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Select-option"
                              id="downshift-3-item-4"
                              role="option"
                            >
                              <span
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Select-option-content"
                                title="内蒙古自治区"
                              >
                                内蒙古自治区
                              </span>
                            </div>
                            <div
                              aria-selected="false"
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Select-option"
                              id="downshift-3-item-5"
                              role="option"
                            >
                              <span
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Select-option-content"
                                title="辽宁省"
                              >
                                辽宁省
                              </span>
                            </div>
                            <div
                              aria-selected="false"
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Select-option"
                              id="downshift-3-item-6"
                              role="option"
                            >
                              <span
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Select-option-content"
                                title="吉林省"
                              >
                                吉林省
                              </span>
                            </div>
                            <div
                              aria-selected="false"
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Select-option"
                              id="downshift-3-item-7"
                              role="option"
                            >
                              <span
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Select-option-content"
                                title="黑龙江省"
                              >
                                黑龙江省
                              </span>
                            </div>
                            <div
                              aria-selected="false"
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Select-option"
                              id="downshift-3-item-8"
                              role="option"
                            >
                              <span
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Select-option-content"
                                title="上海市"
                              >
                                上海市
                              </span>
                            </div>
                            <div
                              aria-selected="false"
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Select-option"
                              id="downshift-3-item-9"
                              role="option"
                            >
                              <span
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Select-option-content"
                                title="江苏省"
                              >
                                江苏省
                              </span>
                            </div>
                            <div
                              aria-selected="false"
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Select-option"
                              id="downshift-3-item-10"
                              role="option"
                            >
                              <span
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Select-option-content"
                                title="浙江省"
                              >
                                浙江省
                              </span>
                            </div>
                            <div
                              aria-selected="false"
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Select-option"
                              id="downshift-3-item-11"
                              role="option"
                            >
                              <span
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Select-option-content"
                                title="安徽省"
                              >
                                安徽省
                              </span>
                            </div>
                            <div
                              aria-selected="false"
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Select-option"
                              id="downshift-3-item-12"
                              role="option"
                            >
                              <span
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Select-option-content"
                                title="福建省"
                              >
                                福建省
                              </span>
                            </div>
                            <div
                              aria-selected="false"
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Select-option"
                              id="downshift-3-item-13"
                              role="option"
                            >
                              <span
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Select-option-content"
                                title="江西省"
                              >
                                江西省
                              </span>
                            </div>
                            <div
                              aria-selected="false"
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Select-option"
                              id="downshift-3-item-14"
                              role="option"
                            >
                              <span
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Select-option-content"
                                title="山东省"
                              >
                                山东省
                              </span>
                            </div>
                            <div
                              aria-selected="false"
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Select-option"
                              id="downshift-3-item-15"
                              role="option"
                            >
                              <span
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Select-option-content"
                                title="河南省"
                              >
                                河南省
                              </span>
                            </div>
                            <div
                              aria-selected="false"
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Select-option"
                              id="downshift-3-item-16"
                              role="option"
                            >
                              <span
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Select-option-content"
                                title="湖北省"
                              >
                                湖北省
                              </span>
                            </div>
                            <div
                              aria-selected="false"
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Select-option"
                              id="downshift-3-item-17"
                              role="option"
                            >
                              <span
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Select-option-content"
                                title="湖南省"
                              >
                                湖南省
                              </span>
                            </div>
                            <div
                              aria-selected="false"
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Select-option"
                              id="downshift-3-item-18"
                              role="option"
                            >
                              <span
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Select-option-content"
                                title="广东省"
                              >
                                广东省
                              </span>
                            </div>
                            <div
                              aria-selected="false"
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Select-option"
                              id="downshift-3-item-19"
                              role="option"
                            >
                              <span
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Select-option-content"
                                title="广西壮族自治区"
                              >
                                广西壮族自治区
                              </span>
                            </div>
                            <div
                              aria-selected="false"
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Select-option"
                              id="downshift-3-item-20"
                              role="option"
                            >
                              <span
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Select-option-content"
                                title="海南省"
                              >
                                海南省
                              </span>
                            </div>
                            <div
                              aria-selected="false"
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Select-option"
                              id="downshift-3-item-21"
                              role="option"
                            >
                              <span
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Select-option-content"
                                title="重庆市"
                              >
                                重庆市
                              </span>
                            </div>
                            <div
                              aria-selected="false"
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Select-option"
                              id="downshift-3-item-22"
                              role="option"
                            >
                              <span
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Select-option-content"
                                title="四川省"
                              >
                                四川省
                              </span>
                            </div>
                            <div
                              aria-selected="false"
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Select-option"
                              id="downshift-3-item-23"
                              role="option"
                            >
                              <span
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Select-option-content"
                                title="贵州省"
                              >
                                贵州省
                              </span>
                            </div>
                            <div
                              aria-selected="false"
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Select-option"
                              id="downshift-3-item-24"
                              role="option"
                            >
                              <span
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Select-option-content"
                                title="云南省"
                              >
                                云南省
                              </span>
                            </div>
                            <div
                              aria-selected="false"
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Select-option"
                              id="downshift-3-item-25"
                              role="option"
                            >
                              <span
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Select-option-content"
                                title="西藏自治区"
                              >
                                西藏自治区
                              </span>
                            </div>
                            <div
                              aria-selected="false"
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Select-option"
                              id="downshift-3-item-26"
                              role="option"
                            >
                              <span
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Select-option-content"
                                title="陕西省"
                              >
                                陕西省
                              </span>
                            </div>
                            <div
                              aria-selected="false"
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Select-option"
                              id="downshift-3-item-27"
                              role="option"
                            >
                              <span
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Select-option-content"
                                title="甘肃省"
                              >
                                甘肃省
                              </span>
                            </div>
                            <div
                              aria-selected="false"
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Select-option"
                              id="downshift-3-item-28"
                              role="option"
                            >
                              <span
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Select-option-content"
                                title="青海省"
                              >
                                青海省
                              </span>
                            </div>
                            <div
                              aria-selected="false"
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Select-option"
                              id="downshift-3-item-29"
                              role="option"
                            >
                              <span
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Select-option-content"
                                title="宁夏回族自治区"
                              >
                                宁夏回族自治区
                              </span>
                            </div>
                            <div
                              aria-selected="false"
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Select-option"
                              id="downshift-3-item-30"
                              role="option"
                            >
                              <span
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Select-option-content"
                                title="新疆维吾尔自治区"
                              >
                                新疆维吾尔自治区
                              </span>
                            </div>
                            <div
                              aria-selected="false"
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Select-option"
                              id="downshift-3-item-31"
                              role="option"
                            >
                              <span
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Select-option-content"
                                title="台湾省"
                              >
                                台湾省
                              </span>
                            </div>
                            <div
                              aria-selected="false"
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Select-option"
                              id="downshift-3-item-32"
                              role="option"
                            >
                              <span
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Select-option-content"
                                title="香港特别行政区"
                              >
                                香港特别行政区
                              </span>
                            </div>
                            <div
                              aria-selected="false"
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Select-option"
                              id="downshift-3-item-33"
                              role="option"
                            >
                              <span
                                class="__AMIS_COMPONENT_CLASS_PREFIX__Select-option-content"
                                title="澳门特别行政区"
                              >
                                澳门特别行政区
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __AMIS_COMPONENT_CLASS_PREFIX__Panel-footer"
              >
                <button
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--primary __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
                  type="submit"
                >
                  <span>
                    Submit
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
